fix(heder): logo position was not centered perfectly

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -34,6 +34,7 @@
   @media #{$tablet} {
     margin-right: unset;
     text-align: center;
+    margin-left: 32px;
     width: 100%;
   }
 }
